// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hello Earth 1`] = `
<button
  onClick={undefined}
>
  Hello Earth
</button>
`;

exports[`Hello World 1`] = `
<button
  onClick={undefined}
>
  Hello World
</button>
`;
